unpackaged/main/default/objects/Maintenance_Work_Order__c/Maintenance_Work_Order__c.object-meta.xml
<CustomObject>
    <label>Maintenance Work Order</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ET Ref No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>