unpackaged/main/default/objects/Maintenance_Work_Order__c/fields/Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Delivered_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivered On</label>
    <type>DateTime</type>
</CustomField>