unpackaged/main/default/objects/Maintenance_Work_Order__c/fields/KM_Reading__c.field-meta.xml
<CustomField>
    <fullName>KM_Reading__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KM Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>