unpackaged/main/default/objects/Maintenance_Work_Order__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>ET_Sales_Agreement__c</referenceTo>
    <relationshipLabel>Maintenance Work Orders</relationshipLabel>
    <relationshipName>Maintenance_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>