unpackaged/main/default/objects/Maintenance_Work_Order__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>